
syntax = "proto3";

import "google/protobuf/any.proto";
import "google/protobuf/timestamp.proto";

package grpc;

// The ContentKam Service Definition.
service ContentKam {
    // Create
    rpc Create (Content) returns (ContentHandles) {}
    // Update
    rpc Update (Content) returns (ContentHandles) {}
    // Get
    rpc Get (ContentHandles) returns (Content) {}
    // Delete
    rpc Delete (ContentHandles) returns (ContentHandles) {}
}

message Content {
    repeated Document documents = 1;
    repeated Media media_items = 2;
}

message ContentHandles {
    repeated Identification item_ids = 1;
    string message = 2;
}

message Document {
    string title = 1;
    string slug = 2;
    bool publish = 3;
    string body = 4;
    enum Language {
        ENGLISH = 0;
        FRENCH = 1;
        PORTUGUESE = 2;
        SPANISH = 3;
        SWAHILI = 4;
    }
    Language language = 5;
    enum Importance {
        LOW = 0;
        MEDIUM = 1;
        HIGH = 2;
        CRITICAL = 3;
    }
    Importance importance = 6;
    enum MediaFilter {
        IG_WILLOW = 0;
        IG_WALDEN = 1;
        IG_VALENCIA = 2;
        IG_TOASTER = 3;
        IG_SUTRO = 4;
        IG_SIERRA = 5;
        IG_RISE = 6;
        IG_NASHVILLE = 7;
        IG_MAYFAIR = 8;
        IG_LOFI = 9;
        IG_KELVIN = 10;
        IG_INKWELL = 11;
        IG_HUDSON = 12;
        IG_HEFE = 13;
        IG_EARLYBIRD = 14;
        IG_BRANNAN = 15;
        IG_AMARO = 16;
        IG_1977 = 17;
    }
    MediaFilter media_filter = 7;
    MetaData metadata = 8;
}

message Media {
    string name = 1;
    enum Type {
        AUDIO = 0;
        DOCUMENT = 1;
        IMAGE = 2;
        VIDEO = 3;
    }
    Type type = 2;
    string file_url = 3;
    MetaData metadata = 4;
}

message MetaData {
    Identification identification = 1;
    TimeStamps timestamps = 2;
    map<string, google.protobuf.Any> m = 3;
}

message Identification {
    string user_id = 1;
    string identifier = 2;
    repeated string tags = 3;
}

message TimeStamps {
    google.protobuf.Timestamp created = 1;
    google.protobuf.Timestamp updated = 2;
}
